...
    }
    
    @objc func search() {
        let ac = UIAlertController(title: "Enter search text", message: nil, preferredStyle: .alert)
        ac.addTextField()
        ac.textFields?[0].text = searchText
        ac.addAction(UIAlertAction(title: "Search", style: .default) { [weak self, weak ac] action in
            guard let self = self else { return }
            guard let ac = ac else { return }
            
            if let text = ac.textFields?[0].text {
                let searchText = text.trimmingCharacters(in: .whitespacesAndNewlines).lowercased()
                self.filteredPetitions = self.petititons.filter {
...
